# AIBasic

./: .clinerules  .gitignore  .roomodes  README.md  pyproject.toml  ruff.toml
.cline/: build.py
.cline/roomodes/: python-tdd.md
.cline/rules/: coding.md  python.md  tdd.md
.devcontainer/: Dockerfile  devcontainer.json
