[project]
name = "default"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "kyouyap" }
]
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "pre-commit>=3.8.0",
    "ruff>=0.6.3",
    "mypy>=1.15.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-skip-slow>=0.0.5",
    "pytest-subtests>=0.14.1",
    "coverage>=7.6.12",
]
